feat: added catalog page to frontend

--- a/frontend/src/pages/CatalogPage/CatalogPage.module.css
+++ b/frontend/src/pages/CatalogPage/CatalogPage.module.css
@@ -1,5 +1,10 @@
+.container {
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+}
+
 .filters {
-    width: 20%;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -7,4 +12,22 @@
 
 .filters li {
     border-bottom: 1px solid hsla(0, 0%, 50%, 0.485);
+}
+
+.filters li:last-child {
+    border-bottom: none;
+}
+
+.left {
+    margin-right: 20px;
+}
+
+.right {
+    /* margin-left: 20px; */
+}
+
+.longCard {
+    display: flex;
+    height: auto;
+    width: auto;
 }
