feat: added card products for catalog page

--- a/frontend/src/components/product/ProductCard.module.css
+++ b/frontend/src/components/product/ProductCard.module.css
@@ -10,6 +10,12 @@
     width: 100%;
     height: auto;
 }
+
+.priceAndButton {
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+}
   
 .productCard button {
     background-color: #3498db;
