feat: add filter panel in catalog page for frontend

--- a/frontend/src/pages/CatalogPage/CatalogPage.module.css
+++ b/frontend/src/pages/CatalogPage/CatalogPage.module.css
@@ -11,8 +11,15 @@
 }
 
 .filters li {
-    display: flex;
     border-bottom: 1px solid hsla(0, 0%, 50%, 0.485);
+}
+
+.oneFilter {
+    display: flex;
+}
+
+.oneFilter:hover {
+    background-color:rgb(0, 153, 255);
 }
 
 .filters li:last-child {
