feat: add filters for device to frontend and backend

--- a/frontend/src/pages/CatalogPage/CatalogPage.module.css
+++ b/frontend/src/pages/CatalogPage/CatalogPage.module.css
@@ -7,6 +7,7 @@
 .filters {
     background-color: white;
     border-radius: 10px;
+    width: 250px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -57,4 +58,10 @@
 
 .longCard:hover h3 {
     color: cornflowerblue;
+}
+
+.inFilter {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
 }
