--- a/frontend/src/pages/CreateDevicePage/CreateDevicePage.module.css
+++ b/frontend/src/pages/CreateDevicePage/CreateDevicePage.module.css
@@ -1,6 +1,9 @@
 .createDevicePage {
     max-width: 600px;
-    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 20px;
     background-color: #f9f9f9;
     border-radius: 8px;
