--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,6 +5,7 @@
 }
 
 body {
+    width: 100%;
     height: 100%;
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
@@ -28,4 +29,21 @@ header a:hover {
 footer a:hover {
     color: #3498db;
 }
-  
+
+.responsiveMenu {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    .responsiveMenu {
+        display: flex;
+        position: fixed;
+        justify-content: space-between;
+        bottom: 0;
+        width: 100%;
+        background-color: #2c3e50;
+        color: white;
+        padding: 10px;
+        box-sizing: border-box;
+    }
+}
