--- a/frontend/src/components/loginForm/LoginForm.module.css
+++ b/frontend/src/components/loginForm/LoginForm.module.css
@@ -5,6 +5,7 @@
 }
 
 .formContainer {
+    margin: 20px;
     background-color: #fff;
     padding: 1.5rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
