--- a/frontend/src/pages/CatalogPage/CatalogPage.module.css
+++ b/frontend/src/pages/CatalogPage/CatalogPage.module.css
@@ -64,5 +64,21 @@
     display: flex;
     align-items: center;
     gap: 5px;
-    justify-content: center;
+    margin-left: 80px;
+}
+
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+    }
+
+    .left {
+        margin: auto;
+    }
+
+    .longCard img {
+        width: 30%;
+        height: 30%;
+    }
+
 }
