--- a/frontend/src/pages/ProfilePage/ProfilePage.module.css
+++ b/frontend/src/pages/ProfilePage/ProfilePage.module.css
@@ -2,7 +2,7 @@
 .profilePage {
     max-width: 800px;
     margin: auto;
-    padding: 20px;
+    padding: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
 }
@@ -55,4 +55,10 @@
     color: black;
     border-radius: 5px;
     cursor: pointer;
+}
+
+@media (max-width: 768px) {
+    .profilePage {
+        margin: auto 15px;
+    }
 }
